# djangoPractice

./: README.md  Vagrantfile  vagrantSetUp.sh  これは自分用の覚書です。.txt
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders  vagrant_cwd
app/djangopractice/djangopractice/: asgi.py  settings.py  urls.py  wsgi.py
app/djangopractice/practice1/: models.py  tests.py  urls.py  views.py
app/djangopractice/practice1-packaged/: LICENSE  MANIFEST.in  README.rst  setup.cfg
app/djangopractice/practice1-packaged/practice1/: admin.py  tests.py
app/djangopractice/practice1-packaged/practice1/migrations/: 0001_initial.py
app/djangopractice/practice1-packaged/practice1/templates/practice1/: results.html
app/djangopractice/practice1/templates/practice1/: index.html  question_detail.html
app/djangopractice/templates/: base_site.html
app/theStory/: manage.py
app/theStory/portal/: views.py
app/theStory/theStory/: asgi.py  settings.py  urls.py  wsgi.py
settingFiles/: httpd.conf  psqlSetting.sql  settings.py
